#801442 by bleen18 : Fixed gap before secondary tabs.

--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -176,6 +176,9 @@ ul.tips {
 .tabs ul.secondary li {
   float: right;
 }
+.tabs ul.secondary li:first-child {
+  padding-right: 0;
+}
 .tabs ul.secondary li:last-child {
   border-left: none;
 }
